add the final report part

--- a/PyCitySchools/PyCitySchools_starter-Copy1.ipynb
+++ b/PyCitySchools/PyCitySchools_starter-Copy1.ipynb
@@ -4774,6 +4774,24 @@
    "source": [
     "scores_by_school_type\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final report\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Comparing Scores by School Type, we can see that the charter type schools have higher overall passrates across reading and math than the district type schools. This is further verified by noting that the top five performing schools were all charter schools and the five bottom performing schools were all district school.\n",
+    "\n",
+    "2. Looking at Math Scores and Reading Scores by Grade, we see that students have lower math scores compared to their reading scores.\n",
+    "\n",
+    "3. There is no direct relation between school spending and math scores or reading scores."
+   ]
   }
  ],
  "metadata": {
@@ -4782,7 +4800,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python [conda env:PythonData]",
    "language": "python",
    "name": "conda-env-PythonData-py"
   },
